--- a/style.css
+++ b/style.css
@@ -119,10 +119,23 @@ body{
     background: #03a9f4;
 }
 
-
-
 .container .right_side{
     position: relative;
     background: #ffffff;
     padding: 40px;
+}
+.about{
+    margin-bottom: 50px;
+}
+.about:last-child{
+    margin-bottom: 0;
+}
+.title2{
+    color: #003147;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+p{
+    color: #333;
 }
