--- a/style.css
+++ b/style.css
@@ -183,3 +183,18 @@ p{
     height: 100%;
     background: #03a9f4;
 }
+.interest ul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.interest ul li{
+    list-style: none;
+    color: #333;
+    font-weight: 500;
+    margin: 10px 0;
+}
+.interest ul li .fa{
+    color: #03a9;
+    font-size: 18px;
+    width: 20px;
+}
