7:33PM kinuha ko yung js sa sample pero walang epekto sa mga element na pinapakelaman ng css

--- a/style.css
+++ b/style.css
@@ -198,3 +198,8 @@ p{
     font-size: 18px;
     width: 20px;
 }
+#colorChangeButton {
+    padding: 10px;
+    margin: 10px 0;
+    cursor: pointer;
+}
